--- a/chutes_and_ladders/mainwindow.ui
+++ b/chutes_and_ladders/mainwindow.ui
@@ -30,13 +30,13 @@
      <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>9</x>
       <y>9</y>
-      <width>88</width>
-      <height>441</height>
+      <width>89</width>
+      <height>501</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -86,6 +86,13 @@
       <widget class="QPushButton" name="rollBut">
        <property name="text">
         <string>Roll</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="moveBut">
+       <property name="text">
+        <string>Make Move</string>
        </property>
       </widget>
      </item>
